# data_mapping

./: Cargo.toml
src/: main.rs
src/db_connectors/: dynamodb.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  postgres.rs  structs.rs
src/utils/: functions.rs  mod.rs  structs.rs  traits.rs
