[package]
name = "sql_data_transformation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "^0.6", features = ["runtime-tokio-rustls", "postgres", "mysql", "mssql"]}
serde = {version = "1.0.188" , features = ["derive"]}
serde_json = {version = "1.0.107"}
tokio = {version = "1.33.0" , features = ["full"]}
anyhow = "1.0.75"
rustls = "0.21.7"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
log = "0.4.20"
async-trait = "0.1.74"
cedar-policy = "2.4.1"
mongodb = "2.7.0"
tracing = "0.1"
tracing-subscriber = "0.3"